--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lock = { git = "https://github.com/DeathWish5/kernel-sync.git"}
+lazy_static = { version = "1.4", features = ["spin_no_std"] }
+buddy_system_allocator = "0.6"
 
 [profile.release]
 debug = true
