--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lock = { git = "https://github.com/DeathWish5/kernel-sync.git"}
+spin = "0.7.0"
 buddy_system_allocator = "0.6"
 
 [profile.release]
