--- a/os/Makefile
+++ b/os/Makefile
@@ -39,7 +39,7 @@ build: env switch-check $(KERNEL_BIN)
 
 switch-check:
 ifeq ($(BOARD), qemu)
-	(which last-qemu) || (rm -f last-k210 && touch last-qemu)
+	(which last-qemu) || (rm -f last-k210 && touch last-qemu && make clean)
 else ifeq ($(BOARD), k210)
 	(which last-k210) || (rm -f last-qemu && touch last-k210 && make clean)
 endif
