--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 spin = "0.7.0"
-riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
+riscv = { git = "https://gitee.com/chyyuu/riscv.git", features = ["inline-asm"] }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 cfg-if = { version = "1.0.0" }
 
