--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ user/build
 user/target/*
 user/.idea/*
 user/Cargo.lock
+user/src/linker.ld
 easy-fs/Cargo.lock
 easy-fs/target/*
 easy-fs-fuse/Cargo.lock
